Add Role, User Class and some security configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/plantdb
+spring.datasource.username=user01
+spring.datasource.password=user01
+spring.jpa.show-sql=true 
+## Hibernate Properties
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+## Hibernate Logging
+logging.level.org.hibernate.SQL=DEBUG
